css/main.css
/* ... */
                .Hello > h4 {
                    font-size: 50px;
                }
                .Hello > h2 {
                    font-size: 80px;
                    padding: 10px 0 30px 0;
                }
                .Hello > p {
                    font-size: 14px;
                    letter-spacing: 1px;
                    padding-bottom: 50px;
                }
                /* .Hello > button {
                    margin-top: 25px;
                    background-color: #F34236;
                    color: #FFF;
                    letter-spacing: 1px;
                    padding-right: 40px;
                    padding-left: 40px;
                } */
/* about me */
        .img-box {
            display: inline-block;
            width: 38%;
            float: left;
            box-shadow: 2px 1px 4px 2px #CCC;
        }
        .info-box {
            display: inline-block;
            width: 57%;
            float: right;
        }
        @media (max-width: 700px) {
            .info-box {
                width: 100%;
                margin: 0;
                margin-top: 40px;
            }
        }
        @media (max-width: 700px) {
            .img-box {
                width: 100%;
                margin: 0;
            }
        }

.caps {
    text-transform: uppercase;
}
            .intro {
                font-size: 27px;
                line-height: 27px;
                font-weight: 400;
                margin: 0 0 10px;
            }
            .info-paragraph {
                font-size: 17px;
                line-height: 18px;
                font-weight: 100;
                margin: 0 0 10px;
            }
                #sociali-icona {
                    padding: 10px 0 35px;
                }
                #sociali-icona a {
                    width: 37px;
                    height: 37px;
                    text-decoration: none;
                    line-height: 35px;
                    background: #000;
                    border-radius: 50%;
                    text-align: center;
                    color: #fff;
                    padding: 1px;
                    margin: 0px 5px 0 0;
                    box-shadow: 0px 1px 5px rgb(116, 111, 111);
                }
                #sociali-icona a:hover {
                    background-color: #F34236;
                }

/* my services */

.service-list {
    display: inline-block;
    width: 100%;
    padding: 25px 0 10px;
}
    .service-list > .service {
        display: inline-block;
        float: left;
        margin-right: 30px;
        width: calc( (100% - 2 * 30px) / 3 );
        padding: 20px 10px 30px;
        box-shadow: #3a4e5f33 0 10px 16px,
                    #3a4e5f0d 0 -5px 16px;
        background-color: #FFF;
        border-radius: 10px;
        text-align: center;
    }
        .service-list h3 {
            font-size: 20px;
            padding: 25px 0 10px;
            text-transform: uppercase;  
         }
        .service-list p {
            font-size: 16px;
            line-height: 26px;
            min-height: 110px; 
         }
        .service-list i.fa {
            border-radius: 80px; 
            background-color: #F34236;
            color: #FFF;
            height: 80px;
            width: 80px;
            font-size: 40px;
            line-height: 80px; 
        }
        .service-list > .service:nth-child(3n) {
            margin-right: 0;
        }

/* my resume */

.resume-container {
    display: inline-block;
    padding: 30px 20px;
    width: 100%;
}
    .resume-box {
        display: inline-block;
        width: calc( (100% - 2 * 20px) / 2 );
        border-radius: 10px;
        padding: 30px 20px;
        box-shadow: #3a4e5f33 0 10px 16px, #3a4e5f0d 0 -5px 16px;
        float: left;
        margin: 0 0 0 20px;
    } 
        .resume-box > .h4 {
            font-size: 22px;
            color: #F34236;
            font-weight: 600;
            text-transform: uppercase;                    
        }
        .resume-box > .h5 {
            font-size: 16px;
            margin-top: 20px;
            margin-bottom: 10px;
            font-weight: 600;
            text-transform: uppercase;
        }
        .resume-box > .text-date {
            font-size: 14px;
            font-style: italic;
            margin-bottom: 10px;
        }
        .resume-box > .text {
            font-size: 15px;
            margin-bottom: 10px;
            min-height: 70px;
        }   


/* freelance */
.freelance-type {
    color: #fff;
    padding: 0 0 30px;
    font-size: 34px;
    line-height: 34px;
    text-align: center;
    text-transform: uppercase;
}
/* my portfolio */
.gallery {
    display: inline-block;
    width: 100%;
}
    .gallery > .gallery-filter {
        display: inline-block;
        width: 100%;
        text-align: center;
        margin-bottom: 30px;
    }
        .gallery > .gallery-filter > div {
            display: inline-block;
            cursor: pointer;
            text-transform: uppercase;
            padding: 5px 20px;
        }
            .gallery > .gallery-filter > div:hover,
            .gallery > .gallery-filter > .active {
                color: #F34236;
            }
    .gallery > .gallery-list {
        display: inline-block;
        width: 100%;
    }
        .gallery > .gallery-list > .gallery-item {
            display: inline-block;
            float: left;
            width: calc( (100% - 60px) / 3 );
            margin-right: 30px;
            margin-bottom: 30px;
            box-shadow: 0 2px 8px #9997;
            padding: 10px;
            border-radius: 8px;
            position: relative;
        }
            .gallery > .gallery-list > .gallery-item:nth-child(3n) {
                margin-right: 0;
            }
            .gallery .gallery-item > img {
                display: inline-block;
                width: 100%;
            }
/* ... */

